# ros2_ws

./: .gitignore  README.md  aruco.dae  setup.template.py  setup_ros2_venv.sh  test.csv
camera_calibration/: dji_tello.yaml  dji_tello_slam.yaml  kinect2.yaml  realsense_d435.yaml
data/data_report/: beamerthemeEuXFEL.sty  xfel_beamer_template.aux  xfel_beamer_template.fdb_latexmk  xfel_beamer_template.fls  xfel_beamer_template.snm  xfel_beamer_template.tex
mesh/: D435_Solid.stl
presentation_data/: xfel_beamer_template.fdb_latexmk  xfel_beamer_template.vrb
src/aruco_detector/: CMakeLists.txt  package.xml
src/aruco_detector/aruco_detector/: marker_filter.py
src/aruco_detector/config/: aruco_opencv.rviz
src/aruco_detector/launch/: detector.launch.py
src/aruco_detector/msg/: SensorState.msg
src/aruco_detector/src/: aruco_detector_ocv.cpp
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/src/: sub_percentage.cpp
src/cv_ros_bridge/: CMakeLists.txt  package.xml
src/cv_ros_bridge/config/: aruco_detect.rviz
src/cv_ros_bridge/cv_ros_bridge/: arucoDetector.py  arucoPub.py  camera_calibration.py  camera_shot.py  cv_ros_bridge.py  cv_ros_bridge_listener.py  cv_ros_bridge_talker.py  edge_detection.py  imageSplitter.py  imageThreshold.py  image_dilation.py  image_erotion.py  image_publisher.py  lineDetection.py  sobelDerivative.py  test.py  video_capture.py
src/cv_ros_bridge/launch/: arucoDetect.launch.py  cv_ros_bridge.launch.py
src/mcap_python/: package.xml  setup.cfg  setup.py
src/mcap_python/mcap_python/: graph_rosbag2.py
src/ros2_orb_slam3/: CMakeLists.txt
src/ros2_orb_slam3/include/ros2_orb_slam3/: common.hpp
src/ros2_orb_slam3/orb_slam3/config/Monocular-Inertial/: dji_tello_slam.yaml
src/ros2_orb_slam3/scripts/: mono_driver_node.py
src/ros2_orb_slam3/src/: common.cpp  tello_imu_slam.cpp  tello_slam.cpp
src/rosbag2_mcap/: package.xml  setup.cfg  setup.py
src/rosbag2_mcap/rosbag2_mcap/: csv_rosbag2.py  export_rosbag2.py  graph_rosbag2.py  read_rosbag2.py
src/rviz_camera_marker_msg/: CMakeLists.txt  package.xml
src/rviz_camera_marker_plugin/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
src/rviz_camera_marker_plugin/include/rviz_camera_marker_plugin/: point_display.hpp
src/rviz_camera_marker_plugin/src/: point_display.cpp
src/state_machine/: CMakeLists.txt  package.xml
src/state_machine/launch/: state_machine.launch.py
src/state_machine/src/: concurrence_demo.cpp  dji_tello_states.hpp  publisher_demo.cpp  simple_state.cpp  yasmin_dji_tello.cpp
src/state_machine/state_machine/: yasmin_viewer_node.py
src/tello_competition/: package.xml  setup.py
src/tello_competition/config/: tello.rviz
src/tello_competition/launch/: launch_tello.launch.py
src/tello_competition/tello_competition/: cameraShot.py  camera_calibration.py  camera_shot.py  save_slam_map.py  visualize_slam_map.py
src/tello_control/: CMakeLists.txt
src/tello_control/src/: auto_twist.cpp  circular_motion.cpp
src/tello_gui/launch/: run.launch.py
src/yahboom_rosmaster/: package.xml
src/yahboom_rosmaster_description/: package.xml
system_data/dji_tello/intake_fan/: intake_fan_battery.csv  intake_fan_temperature.csv
system_data/dji_tello/outtake_fan/: outtake_fan_battery.csv  outtake_fan_temperature.csv
system_data/dji_tello/passive_heatsink/: passive_heatsink_battery.csv  passive_heatsink_temperature.csv
