<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>state_machine</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="manuel_lego1234@hotmail.com">xtal</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>python3-expiringdict</exec_depend>
  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-waitress</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>yasmin</depend>
  <depend>yasmin_ros</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp</depend>
  <depend>yasmin_viewer</depend>
  <depend>yasmin_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>ament_cmake</depend>
  <depend>ament_cmake_python</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
